WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
136735
AX: Children inside a <legend> are not accessible
https://bugs.webkit.org/show_bug.cgi?id=136735
Summary
AX: Children inside a <legend> are not accessible
chris fleizach
Reported
2014-09-10 23:02:56 PDT
AX is not exposing elements inside a <legend>, so that if a control element like a link is in the legend, the user cannot get to it ie) <legend>Not link <a href="
http://www.apple.com
">Link</a></legend> <
rdar://problem/18051714
>
Attachments
patch
(4.47 KB, patch)
2014-09-10 23:08 PDT
,
chris fleizach
mario
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-09-10 23:08:03 PDT
Created
attachment 237933
[details]
patch
chris fleizach
Comment 2
2014-09-11 09:16:42 PDT
http://trac.webkit.org/changeset/173515
chris fleizach
Comment 3
2014-09-11 09:16:58 PDT
Note this was a regression from the well-intentioned
https://bugs.webkit.org/show_bug.cgi?id=122534
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug