AX: Children inside a <legend> are not accessible https://bugs.webkit.org/show_bug.cgi?id=136735

Reviewed by Mario Sanchez Prada.

Source/WebCore:

The AX children of a <legend> are being hidden currently, which makes it impossible for
VoiceOver to activate control elements inside of a <legend>.
The solution is that legend elements SHOULD be allowed to have children.

Test: accessibility/legend-children-are-visible.html

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::canHaveChildren):

LayoutTests:

* accessibility/legend-children-are-visible-expected.txt: Added.
* accessibility/legend-children-are-visible.html: Added.



Canonical link: https://commits.webkit.org/154556@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173515 268f45cc-cd09-0410-ab3c-d52691b4dbfc